src/generated_files/tiny_parserParser.java
// Generated from C:/Users/aymen/Documents/SII/tpcompil/TinyLanguage_SII/src/grammar\tiny_parser.g4 by ANTLR 4.9.1
package generated_files;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class tiny_parserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, INTEGER=20, REAL=21, PRODUCT=22, DIV=23, PLUS=24, 
		MINUS=25, AFFECTATION=26, COMPARAISON=27, IDF=28, WHITESPACE=29, NEWLINE=30, 
		STRING=31, INLINECOMMENT=32, BLOCKCOMMENT=33;
	public static final int
		RULE_program = 0, RULE_declarations = 1, RULE_declaration_type = 2, RULE_type = 3, 
		RULE_idf_dec = 4, RULE_instructions = 5, RULE_inst = 6, RULE_assignment = 7, 
		RULE_condition = 8, RULE_operation_mere = 9, RULE_operation_fils = 10, 
		RULE_operation_gf = 11, RULE_operande = 12, RULE_print = 13, RULE_printcontent = 14, 
		RULE_scan = 15, RULE_if_statement = 16, RULE_else_if = 17, RULE_then = 18, 
		RULE_else_statement = 19, RULE_do_while = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declarations", "declaration_type", "type", "idf_dec", "instructions", 
			"inst", "assignment", "condition", "operation_mere", "operation_fils", 
			"operation_gf", "operande", "print", "printcontent", "scan", "if_statement", 
			"else_if", "then", "else_statement", "do_while"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'compil'", "'('", "')'", "'{'", "'start'", "'}'", "';'", "'intCompil'", 
			"'floatCompil'", "'StringCompil'", "','", "'printCompil'", "'scanCompil'", 
			"'if'", "'else if'", "'then'", "'else'", "'do'", "'while'", null, null, 
			"'*'", "'/'", "'+'", "'-'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "INTEGER", "REAL", "PRODUCT", 
			"DIV", "PLUS", "MINUS", "AFFECTATION", "COMPARAISON", "IDF", "WHITESPACE", 
			"NEWLINE", "STRING", "INLINECOMMENT", "BLOCKCOMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tiny_parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public tiny_parserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode IDF() { return getToken(tiny_parserParser.IDF, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tiny_parserVisitor ) return ((tiny_parserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(T__0);
			setState(43);
			match(IDF);
			setState(44);
			match(T__1);
			setState(45);
			match(T__2);
			setState(46);
			match(T__3);
			setState(47);
			declarations();
			setState(48);
			match(T__4);
			setState(49);
			instructions();
			setState(50);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public Declaration_typeContext declaration_type() {
			return getRuleContext(Declaration_typeContext.class,0);
		}
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tiny_parserVisitor ) return ((tiny_parserVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		try {
			setState(57);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				declaration_type();
				setState(54);
				declarations();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(56);
				declaration_type();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaration_typeContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Idf_decContext idf_dec() {
			return getRuleContext(Idf_decContext.class,0);
		}
		public Declaration_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tiny_parserVisitor ) return ((tiny_parserVisitor<? extends T>)visitor).visitDeclaration_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaration_typeContext declaration_type() throws RecognitionException {
		Declaration_typeContext _localctx = new Declaration_typeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			type();
			setState(60);
			idf_dec();
			setState(61);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tiny_parserVisitor ) return ((tiny_parserVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__9))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Idf_decContext extends ParserRuleContext {
		public TerminalNode IDF() { return getToken(tiny_parserParser.IDF, 0); }
		public Idf_decContext idf_dec() {
			return getRuleContext(Idf_decContext.class,0);
		}
		public Idf_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idf_dec; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tiny_parserVisitor ) return ((tiny_parserVisitor<? extends T>)visitor).visitIdf_dec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Idf_decContext idf_dec() throws RecognitionException {
		Idf_decContext _localctx = new Idf_decContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_idf_dec);
		try {
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				match(IDF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				match(IDF);
				setState(67);
				match(T__10);
				setState(68);
				idf_dec();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionsContext extends ParserRuleContext {
		public InstContext inst() {
			return getRuleContext(InstContext.class,0);
		}
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public InstructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tiny_parserVisitor ) return ((tiny_parserVisitor<? extends T>)visitor).visitInstructions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionsContext instructions() throws RecognitionException {
		InstructionsContext _localctx = new InstructionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_instructions);
		try {
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				inst();
				setState(73);
				instructions();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				inst();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public ScanContext scan() {
			return getRuleContext(ScanContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public Do_whileContext do_while() {
			return getRuleContext(Do_whileContext.class,0);
		}
		public InstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inst; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tiny_parserVisitor ) return ((tiny_parserVisitor<? extends T>)visitor).visitInst(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstContext inst() throws RecognitionException {
		InstContext _localctx = new InstContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_inst);
		try {
			setState(83);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDF:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				assignment();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				print();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				scan();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				if_statement();
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 5);
				{
				setState(82);
				do_while();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode IDF() { return getToken(tiny_parserParser.IDF, 0); }
		public TerminalNode AFFECTATION() { return getToken(tiny_parserParser.AFFECTATION, 0); }
		public Operation_mereContext operation_mere() {
			return getRuleContext(Operation_mereContext.class,0);
		}
		public TerminalNode STRING() { return getToken(tiny_parserParser.STRING, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tiny_parserVisitor ) return ((tiny_parserVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(IDF);
			setState(86);
			match(AFFECTATION);
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case INTEGER:
			case REAL:
			case PLUS:
			case MINUS:
			case IDF:
				{
				setState(87);
				operation_mere(0);
				}
				break;
			case STRING:
				{
				setState(88);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(91);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public List<Operation_mereContext> operation_mere() {
			return getRuleContexts(Operation_mereContext.class);
		}
		public Operation_mereContext operation_mere(int i) {
			return getRuleContext(Operation_mereContext.class,i);
		}
		public TerminalNode COMPARAISON() { return getToken(tiny_parserParser.COMPARAISON, 0); }
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tiny_parserVisitor ) return ((tiny_parserVisitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			operation_mere(0);
			setState(94);
			match(COMPARAISON);
			setState(95);
			operation_mere(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operation_mereContext extends ParserRuleContext {
		public Operation_filsContext operation_fils() {
			return getRuleContext(Operation_filsContext.class,0);
		}
		public Operation_mereContext operation_mere() {
			return getRuleContext(Operation_mereContext.class,0);
		}
		public TerminalNode PLUS() { return getToken(tiny_parserParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(tiny_parserParser.MINUS, 0); }
		public Operation_mereContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation_mere; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tiny_parserVisitor ) return ((tiny_parserVisitor<? extends T>)visitor).visitOperation_mere(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Operation_mereContext operation_mere() throws RecognitionException {
		return operation_mere(0);
	}

	private Operation_mereContext operation_mere(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Operation_mereContext _localctx = new Operation_mereContext(_ctx, _parentState);
		Operation_mereContext _prevctx = _localctx;
		int _startState = 18;
		enterRecursionRule(_localctx, 18, RULE_operation_mere, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(98);
			operation_fils(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(108);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(106);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new Operation_mereContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_operation_mere);
						setState(100);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(101);
						match(PLUS);
						setState(102);
						operation_fils(0);
						}
						break;
					case 2:
						{
						_localctx = new Operation_mereContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_operation_mere);
						setState(103);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(104);
						match(MINUS);
						setState(105);
						operation_fils(0);
						}
						break;
					}
					} 
				}
				setState(110);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Operation_filsContext extends ParserRuleContext {
		public Operation_gfContext operation_gf() {
			return getRuleContext(Operation_gfContext.class,0);
		}
		public Operation_filsContext operation_fils() {
			return getRuleContext(Operation_filsContext.class,0);
		}
		public TerminalNode PRODUCT() { return getToken(tiny_parserParser.PRODUCT, 0); }
		public TerminalNode DIV() { return getToken(tiny_parserParser.DIV, 0); }
		public Operation_filsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation_fils; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tiny_parserVisitor ) return ((tiny_parserVisitor<? extends T>)visitor).visitOperation_fils(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Operation_filsContext operation_fils() throws RecognitionException {
		return operation_fils(0);
	}

	private Operation_filsContext operation_fils(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Operation_filsContext _localctx = new Operation_filsContext(_ctx, _parentState);
		Operation_filsContext _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, 20, RULE_operation_fils, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(112);
			operation_gf();
			}
			_ctx.stop = _input.LT(-1);
			setState(122);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(120);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						_localctx = new Operation_filsContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_operation_fils);
						setState(114);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(115);
						match(PRODUCT);
						setState(116);
						operation_gf();
						}
						break;
					case 2:
						{
						_localctx = new Operation_filsContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_operation_fils);
						setState(117);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(118);
						match(DIV);
						setState(119);
						operation_gf();
						}
						break;
					}
					} 
				}
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Operation_gfContext extends ParserRuleContext {
		public Operation_mereContext operation_mere() {
			return getRuleContext(Operation_mereContext.class,0);
		}
		public TerminalNode MINUS() { return getToken(tiny_parserParser.MINUS, 0); }
		public Operation_gfContext operation_gf() {
			return getRuleContext(Operation_gfContext.class,0);
		}
		public TerminalNode PLUS() { return getToken(tiny_parserParser.PLUS, 0); }
		public OperandeContext operande() {
			return getRuleContext(OperandeContext.class,0);
		}
		public Operation_gfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation_gf; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tiny_parserVisitor ) return ((tiny_parserVisitor<? extends T>)visitor).visitOperation_gf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Operation_gfContext operation_gf() throws RecognitionException {
		Operation_gfContext _localctx = new Operation_gfContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_operation_gf);
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				match(T__1);
				setState(126);
				operation_mere(0);
				setState(127);
				match(T__2);
				}
				break;
			case MINUS:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				match(MINUS);
				setState(130);
				operation_gf();
				}
				break;
			case PLUS:
				enterOuterAlt(_localctx, 3);
				{
				setState(131);
				match(PLUS);
				setState(132);
				operation_gf();
				}
				break;
			case INTEGER:
			case REAL:
			case IDF:
				enterOuterAlt(_localctx, 4);
				{
				setState(133);
				operande();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperandeContext extends ParserRuleContext {
		public TerminalNode IDF() { return getToken(tiny_parserParser.IDF, 0); }
		public TerminalNode INTEGER() { return getToken(tiny_parserParser.INTEGER, 0); }
		public TerminalNode REAL() { return getToken(tiny_parserParser.REAL, 0); }
		public OperandeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operande; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tiny_parserVisitor ) return ((tiny_parserVisitor<? extends T>)visitor).visitOperande(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperandeContext operande() throws RecognitionException {
		OperandeContext _localctx = new OperandeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_operande);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << REAL) | (1L << IDF))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public PrintcontentContext printcontent() {
			return getRuleContext(PrintcontentContext.class,0);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tiny_parserVisitor ) return ((tiny_parserVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(T__11);
			setState(139);
			match(T__1);
			setState(140);
			printcontent();
			setState(141);
			match(T__2);
			setState(142);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintcontentContext extends ParserRuleContext {
		public Operation_mereContext operation_mere() {
			return getRuleContext(Operation_mereContext.class,0);
		}
		public TerminalNode STRING() { return getToken(tiny_parserParser.STRING, 0); }
		public PrintcontentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printcontent; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tiny_parserVisitor ) return ((tiny_parserVisitor<? extends T>)visitor).visitPrintcontent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintcontentContext printcontent() throws RecognitionException {
		PrintcontentContext _localctx = new PrintcontentContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_printcontent);
		try {
			setState(146);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case INTEGER:
			case REAL:
			case PLUS:
			case MINUS:
			case IDF:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				operation_mere(0);
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(145);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScanContext extends ParserRuleContext {
		public TerminalNode IDF() { return getToken(tiny_parserParser.IDF, 0); }
		public ScanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scan; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tiny_parserVisitor ) return ((tiny_parserVisitor<? extends T>)visitor).visitScan(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScanContext scan() throws RecognitionException {
		ScanContext _localctx = new ScanContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_scan);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(T__12);
			setState(149);
			match(T__1);
			setState(150);
			match(IDF);
			setState(151);
			match(T__2);
			setState(152);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
